# cloud-native-ci

./: .gitignore  README.md
fastapi-p4/: .coveragerc  pyproject.toml  requirements.txt
fastapi-p4/docker/: Dockerfile
src/django/: .coveragerc  Dockerfile  manage.py  requirements.txt
src/django/mysite/: settings.py
